--- a/08-gerenciamento-dependencias-maven/quick-start-maven/pom.xml
+++ b/08-gerenciamento-dependencias-maven/quick-start-maven/pom.xml
@@ -14,5 +14,10 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+    <groupId>org.hibernate.validator</groupId>
+    <artifactId>hibernate-validator</artifactId>
+    <version>8.0.1.Final</version>
+</dependency>xx'
   </dependencies>
 </project>
